--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,90 +40,13 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <TextView
-        android:id="@+id/hi_textview"
+    <FrameLayout
+        android:id="@+id/mainActivityFrameLayout_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="18dp"
-        android:fontFamily="@font/lato"
-        android:text="Hi,"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_dashboard"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_dashboard" />
-
-    <TextView
-        android:id="@+id/name_of_user_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/lato"
-        android:text="Anastesia Steal"
-        android:textColor="@color/yellow"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/hi_textview"/>
-
-    <TextView
-        android:id="@+id/textview_after_username_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="6dp"
-        android:fontFamily="@font/noto_sans_italic"
-        android:text="What brings you in today?"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        app:layout_constraintLeft_toRightOf="@+id/name_of_user_id"
-        app:layout_constraintTop_toBottomOf="@+id/hi_textview" />
-
-    <TextView
-        android:id="@+id/category_txtView_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/name_of_user_id"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="18dp"
-        android:text="Category"
-        android:fontFamily="@font/lato"
-        android:textSize="18sp"
-        android:textColor="@color/yellow"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/category_recyclerView_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/category_txtView_id"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="18dp"/>
-
-    <TextView
-        android:id="@+id/allProducts_txtView_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/category_recyclerView_id"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="18dp"
-        android:text="All Products"
-        android:fontFamily="@font/lato"
-        android:textSize="18sp"
-        android:textColor="@color/yellow"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/allProducts_recyclerView_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="18dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/allProducts_txtView_id" />
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomBarContainer_id"
