--- a/app/src/main/res/drawable/product_img_shape.xml
+++ b/app/src/main/res/drawable/product_img_shape.xml
@@ -5,6 +5,8 @@
         <shape android:shape="rectangle">
             <solid android:color="#808080"/>
             <corners android:topLeftRadius="5dp" android:bottomLeftRadius="5dp" android:topRightRadius="5dp" android:bottomRightRadius="27dp"/>
+            <size android:width="88dp"
+                android:height="104dp" />
         </shape>
     </item>
 
