--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -25,7 +25,7 @@
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/your_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="33dp"
@@ -35,7 +35,7 @@
         android:textSize="24dp" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/profile_img"
         android:layout_width="90dp"
         android:layout_height="89dp"
         android:layout_marginLeft="33dp"
@@ -43,7 +43,7 @@
         android:src="@drawable/account_ic__for_accounts" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
@@ -53,7 +53,7 @@
         android:text="Mansi Gangurde" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/phone_no"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="130dp"
@@ -63,7 +63,7 @@
         android:text="8923921831" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/address1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="210dp"
@@ -73,7 +73,7 @@
         android:text="Address Line 1 - (Home)" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/address2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="260dp"
@@ -83,7 +83,7 @@
         android:text="Address Line 2 - (Work)" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/about_us"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="580dp"
@@ -93,7 +93,7 @@
         android:text="About Us" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/contact_us"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="155dp"
@@ -103,7 +103,7 @@
         android:text="Contact Us" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/terms_cond"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="120dp"
