--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="18dp"
-            android:text="Whishlist"
+            android:text="Cart         "
             android:textColor="@color/white"
             android:textSize="24dp" />
 
@@ -43,9 +43,41 @@
                 android:textColor="@color/yellow"
                 android:textSize="20dp" />
         </LinearLayout>
-
-
     </LinearLayout>
 
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/cart_Products_recyclerView_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="18dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginRight="18dp"
+            android:layout_marginBottom="5dp" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginTop="670dp"
+        android:background="@color/blue">
+
+    </LinearLayout>
+    <Button
+        android:id="@+id/buy_all_button"
+        android:layout_width="360dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="670dp"
+        android:backgroundTint="@color/yellow"
+        android:text="Buy All"
+        android:textColor="@color/black" />
 
 </FrameLayout>
