--- a/app/src/main/res/layout/activity_on_click_product.xml
+++ b/app/src/main/res/layout/activity_on_click_product.xml
@@ -4,18 +4,195 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/blue"
     tools:context=".OnClickProductActivity">
 
+<androidx.appcompat.widget.LinearLayoutCompat
+    android:id="@+id/topLinearLayout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:layout_margin="18dp"
+    android:gravity="center">
+
+    <ImageView
+        android:id="@+id/onClickProductBackBtn"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/backbtn"
+        android:clickable="true" />
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"/>
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="34dp"
+        android:src="@drawable/logo"
+        android:gravity="end" />
+
+</androidx.appcompat.widget.LinearLayoutCompat>
+
     <TextView
-        android:id="@+id/productChNav"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="148dp"
-        android:text="Blank"
-        android:textColor="@color/black"
-        android:textSize="24sp"
+        android:id="@+id/onclickProductName"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/topLinearLayout"
+        android:layout_margin="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Name of the Product"
+        android:textColor="@color/white"
+        android:fontFamily="@font/noto_sans"
+        android:textSize="16sp"
+        android:maxLines="2"/>
+
+    <ImageView
+        android:id="@+id/onClickProductImage"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintTop_toBottomOf="@+id/onclickProductName"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="18dp"
+        android:src="@drawable/pimg1"/>
+
+    <TextView
+        android:id="@+id/descriptionHeading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/onClickProductCategory"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_margin="18dp"
+        android:text="Description"
+        android:textColor="@color/yellow"
+        android:fontFamily="@font/lato"
+        android:textSize="18sp"/>
+
+    <TextView
+        android:id="@+id/onclickProductDescription"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/descriptionHeading"
+        android:layout_marginRight="18dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginTop="9dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="nulla ea magna. Et est amet pariatur irure deserunt reprehenderit aliqua magna mollit. Voluptate magna aliqua proident voluptate aliqua."
+        android:textColor="@color/white"
+        android:fontFamily="@font/noto_sans"
+        android:textSize="16sp"/>
+
+    <TextView
+        android:id="@+id/onClickProductCategory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/onClickProductImage"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_margin="18dp"
+        android:textColor="#808080"
+        android:text="Category"
+        android:fontFamily="@font/noto_sans"/>
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/onClickLinearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/onclickProductDescription"
+        android:layout_margin="18dp"
+        android:orientation="horizontal">
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/onClickLinearLayoutInner1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/priceimg"/>
+            <TextView
+                android:id="@+id/onClickPriceTag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="1220/-"
+                android:textColor="@color/yellow"
+                android:textSize="16sp"
+                android:fontFamily="@font/noto_sans"/>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/onClickLinearLayoutInner2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/podimg"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="Pay on delivery"
+                android:textSize="16sp"
+                android:textColor="@color/yellow"/>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <LinearLayout
+        android:id="@+id/LinearLayout3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/onClickLinearLayout2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_margin="18dp">
+
+        <Button
+            android:id="@+id/buyProductBtn"
+            android:layout_width="150dp"
+            android:layout_height="54dp"
+            android:backgroundTint="@color/yellow"
+            android:text="Buy Now"
+            android:textColor="@color/black"
+            app:rippleColor="#000000"
+            android:textAllCaps="false"/>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/addToCartProductBtn"
+            android:layout_width="150dp"
+            android:layout_height="54dp"
+            android:text="Add to Cart"
+            android:backgroundTint="@color/yellow"
+            android:textColor="@color/black"
+            app:rippleColor="#000000"
+            android:textAllCaps="false"/>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
