--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -6,37 +6,40 @@
     android:background="@color/blue"
     tools:context=".fragments.CartFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="18dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="18dp"
-            android:text="Cart         "
+            android:text="Cart"
+            android:fontFamily="@font/lato"
             android:textColor="@color/white"
             android:textSize="24dp" />
 
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="22dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/total_items_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="60dp"
                 android:text="Total Items :"
                 android:textColor="@color/white"
-                android:textSize="20dp" />
+                android:textSize="18dp"
+                android:layout_marginRight="5dp"/>
 
             <TextView
                 android:id="@+id/count"
-                android:layout_width="46dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:text="07"
@@ -45,23 +48,13 @@
         </LinearLayout>
     </LinearLayout>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp">
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/cart_Products_recyclerView_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="70dp"
             android:layout_marginLeft="18dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginRight="18dp"
-            android:layout_marginBottom="5dp" />
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
+            android:layout_marginRight="18dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
