--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -6,48 +6,33 @@
     android:background="@color/blue"
     tools:context=".fragments.OrdersFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/your_order"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="22dp"
-        android:text="Your Orders "
-        android:textSize="22dp"
+        android:layout_margin="18dp"
+        android:text="Your Orders"
+        android:textSize="20dp"
+        android:fontFamily="@font/lato"
         android:textColor="@color/white"/>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/outer_LL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginRight="18dp"
+        android:layout_marginLeft="18dp"
         android:orientation="vertical">
+
         <!--        1st Card-->
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/inner_card_LL"
             android:layout_width="match_parent"
-            android:layout_height="230dp"
-            android:layout_margin="10dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/border_background"
             android:orientation="horizontal"
-            android:padding="12dp">
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/product_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="8dp"
-                    android:text="Cotton Shirts"
-                    android:textColor="@color/white"
-                    android:textSize="14sp" />
+            android:padding="9dp">
 
                 <ImageView
                     android:id="@+id/product_image_id"
@@ -59,13 +44,10 @@
                     android:scaleType="centerCrop"
                     android:src="@drawable/trial" />
 
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="wrap_content"
-                android:layout_height="190dp"
-                android:layout_marginTop="10dp"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <androidx.appcompat.widget.LinearLayoutCompat
@@ -241,9 +223,9 @@
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="130dp"
-                    android:layout_marginTop="15dp"
-                    android:orientation="vertical">
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
 
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="wrap_content"
@@ -261,9 +243,9 @@
 
                         <TextView
                             android:id="@+id/estimated_date"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="60dp"
+                            android:gravity="end"
                             android:text="2/6/2022"
                             android:textColor="@color/yellow">
 
@@ -278,50 +260,31 @@
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
-        <!--    2nd Card-->
-
+        <!--        2nd Card-->
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/second_inner_card_LL"
+            android:id="@+id/inner_card_LL1"
             android:layout_width="match_parent"
-            android:layout_height="230dp"
-            android:layout_margin="10dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/border_background"
             android:orientation="horizontal"
-            android:padding="12dp">
+
+            android:padding="9dp"
+            android:layout_marginTop="9dp">
+
+            <ImageView
+                android:id="@+id/product_image_id1"
+                android:layout_width="88dp"
+                android:layout_height="110dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/product_img_shape"
+                android:scaleType="centerCrop"
+                android:src="@drawable/trial" />
+
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/second_product_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="8dp"
-                    android:text="Denim Jackets"
-                    android:textColor="@color/white"
-                    android:textSize="14sp" />
-
-                <ImageView
-                    android:id="@+id/second_product_image_id"
-                    android:layout_width="88dp"
-                    android:layout_height="110dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="15dp"
-                    android:background="@drawable/product_img_shape"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/trial" />
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="wrap_content"
-                android:layout_height="190dp"
-                android:layout_marginTop="10dp"
                 android:orientation="vertical">
 
                 <androidx.appcompat.widget.LinearLayoutCompat
@@ -329,7 +292,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/second_order_date"
+                        android:id="@+id/order_date1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="30dp"
@@ -339,12 +302,12 @@
                         android:textSize="14sp" />
 
                     <TextView
-                        android:id="@+id/second_date"
+                        android:id="@+id/date1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="8dp"
-                        android:text="12/5/2022"
+                        android:text="22/5/2022"
                         android:textColor="@color/white"
                         android:textSize="14sp" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
@@ -355,7 +318,7 @@
                     android:layout_marginLeft="20dp">
 
                     <TextView
-                        android:id="@+id/second_status"
+                        android:id="@+id/status1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
@@ -367,12 +330,12 @@
                     </TextView>
 
                     <TextView
-                        android:id="@+id/second_Status_result"
+                        android:id="@+id/Status_result1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="8dp"
-                        android:text="Received"
+                        android:text="Pending"
                         android:textColor="@color/white"
                         android:textSize="14sp">
 
@@ -391,7 +354,7 @@
                         android:layout_marginLeft="20dp">
 
                         <TextView
-                            android:id="@+id/second_pricetxt"
+                            android:id="@+id/pricetxt1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
@@ -403,12 +366,12 @@
                         </TextView>
 
                         <TextView
-                            android:id="@+id/second_price_no"
+                            android:id="@+id/price_no1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:layout_marginTop="8dp"
-                            android:text="1270/-"
+                            android:text="370/-"
                             android:textColor="@color/white"
                             android:textSize="14sp">
 
@@ -422,7 +385,7 @@
                         android:layout_marginLeft="40dp">
 
                         <TextView
-                            android:id="@+id/second_qty"
+                            android:id="@+id/qty1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
@@ -434,7 +397,7 @@
                         </TextView>
 
                         <TextView
-                            android:id="@+id/second_qty_no"
+                            android:id="@+id/qty_no1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
@@ -470,7 +433,7 @@
                     android:layout_marginLeft="20dp">
 
                     <TextView
-                        android:id="@+id/second_total_price"
+                        android:id="@+id/total_price1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
@@ -482,12 +445,12 @@
                     </TextView>
 
                     <TextView
-                        android:id="@+id/second_price"
+                        android:id="@+id/price1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="-5dp"
-                        android:text="1270/-"
+                        android:text="370/-"
                         android:textColor="@color/yellow"
                         android:textSize="14sp">
 
@@ -497,9 +460,9 @@
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="120dp"
-                    android:layout_marginTop="15dp"
-                    android:orientation="vertical">
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
 
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="wrap_content"
@@ -507,8 +470,8 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/second_estimated"
-                            android:layout_width="match_parent"
+                            android:id="@+id/estimated1"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Estimated Delivery"
                             android:textColor="@color/white">
@@ -516,11 +479,11 @@
                         </TextView>
 
                         <TextView
-                            android:id="@+id/second_estimated_date"
-                            android:layout_width="wrap_content"
+                            android:id="@+id/estimated_date1"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="55dp"
-                            android:text="20/5/2022"
+                            android:gravity="end"
+                            android:text="2/6/2022"
                             android:textColor="@color/yellow">
 
                         </TextView>
